[gd_scene format=3 uid="uid://tutorial_scene_001"]

[ext_resource type="Script" path="res://scripts/tutorial/Tutorial.gd" id="1_tutorial"]

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tutorial")

[node name="MessagePanel" type="Panel" parent="."]
visible = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="MessagePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="MessagePanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "欢迎来到《逆果溯因》"
horizontal_alignment = 1

[node name="TextLabel" type="Label" parent="MessagePanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "你需要从给定的结果，构建一条合理的因果链。\n\n点击继续开始教程..."
autowrap_mode = 2
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="MessagePanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "继续"

[node name="SkipButton" type="Button" parent="MessagePanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "跳过教程"
